// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StructuredSearch should match snapshot when no results 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  annotationProperties={
    Array [
      Object {
        "label": "rdfAbout",
        "value": "rdfAbout",
      },
    ]
  }
  mapToProps={[Function]}
  removeFromObject={[MockFunction]}
  setStoreState={[MockFunction]}
  structuredSelectedElement="33"
>
  <Component />
</Connect>
`;

exports[`StructuredSearch should match snapshot when results 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  annotationProperties={
    Array [
      Object {
        "label": "rdfAbout",
        "value": "rdfAbout",
      },
    ]
  }
  mapToProps={[Function]}
  removeFromObject={[MockFunction]}
  setStoreState={[MockFunction]}
  structuredSelectedElement="33"
  structuredSelection={
    Object {
      "1": "node",
      "12": "edge",
      "33": "node",
    }
  }
>
  <Component />
</Connect>
`;
